Modernize Glazed Lists internal APIs